--- a/src/scss/dark/include/newtab/_edit.scss
+++ b/src/scss/dark/include/newtab/_edit.scss
@@ -90,6 +90,10 @@ body.dark {
 
     div#search {
 
+      > select {
+        background: lighten($darkContentBackground2, 5%);
+      }
+
       > a.edit:hover {
         background: lighten($darkContentBackground2, 5%);
       }
